
Language files listed under each version were made by the author beside them, and then
modified by me for consistency/bug fixing.

Please send any bug reports to BenBE@omorphia.de, or use the bug report tracker
at sourceforge (http://sourceforge.net/tracker/?group_id=114997&atid=670231)

Version 1.0.8.5
  -  Added language files
     * AutoHotkey (Naveen Garg)
     * PureBasic (Gustavo Julio Fiorenza)
  -  Improvements to language files (BenBE)
     * Fixed case-insensitively duplicate keywords (BenBE)
Version 1.0.8.4
  -  Added language files
     * BibTeX (Quinn Taylor)
     * CMake (Daniel Nelson)
     * Erlang (Benny Baumann, Dan Forest-Barbier, Uwe Dauernheim)
     * FO (abas-ERP) (Tan-Vinh Nguyen)
     * Property Files (Edy Hinzen)
     * Whois (RPSL format) entries (Benny Baumann)
  -  Changed INT_BASIC number format to allow numbers followed . at EOL (BenBE)
  -  Higher prority for keywords over regexps (BenBE)
  -  Added missing set_script_style API function (BenBE)
  -  Fixed missing check for comment_regexp preference in HardQuotes (BenBE)
  -  Fixed a problem with Strict Block Detection if the Strict Block Regexp
     requires matching groups for itself (BenBE)
  -  Improvements to language files (BenBE)
     * Added PCRE regexp support for Action script (SF#2655644, BenBE)
     * Removed some superfluous keywords from ABAP (BenBE)
     * Removed duplicate keywords for Progress (BenBE)
     * Removed duplicate keywords for T-SQL (BenBE)
     * Linking for PowerShell special variables revised (BenBE)
     * Fixed linking in ColdFusion (BenBE)
     * Fixed linking in LaTeX (BenBE)
     * Fixed linking in mIRC Scripting language (BenBE)
     * Fixed escape char regexp for C-style languages (BenBE)
     * Fixed @""-string handling for C# (SF#2789371, BenBE)
     * Fixed Strict Block Detection for PHP blocks (BenBE)
     * Changed allowed chars around Powershell operators (SF#2688863, BenBE)
     * Minor reordering inside of PHP language file (BenBE)